<resources>

    <string name="app_name">App Like</string>


    <!--// Dummy for tools-->
    <string name="tools_item_satellite_name">Starship-1</string>
    <string name="tools_satellite_detail_first_flight_date">01.01.2022</string>
    <string name="tools_satellite_detail_height_mass">Height/Mass: 110/1135000</string>
    <string name="tools_satellite_detail_cost">Cost: 8.300.000</string>
    <string name="tools_satellite_detail_last_position">Last Position: (0.864328541,0.646450811)</string>
    <!--//-->


    <!--// List-->
    <string name="text_hint_search">Type for search…</string>
    <string name="text_no_list">No found satellite list!</string>
    <string name="text_state_active">Active</string>
    <string name="text_state_passive">Passive</string>


    <!--// Detail-->
    <string name="text_height_mass"><![CDATA[<big>Height/Mass:</big><small>%s/%s</small>]]></string>
    <string name="text_cost"><![CDATA[<big>Cost:</big><small>%s</small>]]></string>
    <string name="text_last_position"><![CDATA[<big>Last Position:</big><small>(%s,%s)</small>]]></string>


</resources>