<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.omer.ilhanli.applike.ui.detail.SatelliteDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/detail_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/detail_linear_satellite_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_detail_satellite_name"
                style="@style/TextView.Large.With.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.satellite.name}"
                tools:text="@string/tools_item_satellite_name" />

            <TextView
                android:id="@+id/tv_detail_satellite_first_flight_date"
                style="@style/TextView.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@{viewModel.satelliteDetail.firstFlight}"
                tools:text="@string/tools_satellite_detail_first_flight_date" />

            <TextView
                android:id="@+id/tv_detail_satellite_height_mass"
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:text="@{@string/text_height_mass(viewModel.satelliteDetail.height,viewModel.satelliteDetail.mass)}"
                tools:text="@string/tools_satellite_detail_height_mass" />

            <TextView
                android:id="@+id/tv_detail_satellite_cost"
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@{@string/text_cost(viewModel.satelliteDetail.costPerLaunch)}"
                tools:text="@string/tools_satellite_detail_cost" />

            <TextView
                android:id="@+id/tv_detail_satellite_last_position"
                style="@style/TextView.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                app:format="@{viewModel.randomPosition}"
                tools:text="@string/tools_satellite_detail_last_position" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>